tests/ui/suggestions/object-unsafe-trait-should-use-self-2021-without-dyn.stderr
error: associated item referring to unboxed trait object for its own trait
  --> $DIR/object-unsafe-trait-should-use-self-2021-without-dyn.rs:4:13
   |
LL | trait A: Sized {
   |       - in this trait
LL |     fn f(a: A) -> A;
   |             ^     ^
   |
help: you might have meant to use `Self` to refer to the implementing type
   |
LL |     fn f(a: Self) -> Self;
   |             ~~~~     ~~~~

error[E0038]: the trait `A` cannot be made into an object
  --> $DIR/object-unsafe-trait-should-use-self-2021-without-dyn.rs:4:13
   |
LL |     fn f(a: A) -> A;
   |             ^ `A` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/object-unsafe-trait-should-use-self-2021-without-dyn.rs:3:10
   |
LL | trait A: Sized {
   |       -  ^^^^^ ...because it requires `Self: Sized`
   |       |
   |       this trait cannot be made into an object...

error: associated item referring to unboxed trait object for its own trait
  --> $DIR/object-unsafe-trait-should-use-self-2021-without-dyn.rs:11:13
   |
LL | trait B {
   |       - in this trait
LL |     fn f(a: B) -> B;
   |             ^     ^
   |
help: you might have meant to use `Self` to refer to the implementing type
   |
LL |     fn f(a: Self) -> Self;
   |             ~~~~     ~~~~

error[E0038]: the trait `B` cannot be made into an object
  --> $DIR/object-unsafe-trait-should-use-self-2021-without-dyn.rs:11:13
   |
LL |     fn f(a: B) -> B;
   |             ^ `B` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/object-unsafe-trait-should-use-self-2021-without-dyn.rs:11:8
   |
LL | trait B {
   |       - this trait cannot be made into an object...
LL |     fn f(a: B) -> B;
   |        ^ ...because associated function `f` has no `self` parameter
help: consider turning `f` into a method by giving it a `&self` argument
   |
LL |     fn f(&self, a: B) -> B;
   |          ++++++
help: alternatively, consider constraining `f` so it does not apply to trait objects
   |
LL |     fn f(a: B) -> B where Self: Sized;
   |                     +++++++++++++++++

error[E0782]: trait objects must include the `dyn` keyword
  --> $DIR/object-unsafe-trait-should-use-self-2021-without-dyn.rs:4:13
   |
LL |     fn f(a: A) -> A;
   |             ^
   |
help: use a new generic type parameter, constrained by `A`
   |
LL |     fn f<T: A>(a: T) -> A;
   |         ++++++    ~
help: you can also use an opaque type, but users won't be able to specify the type parameter when calling the `fn`, having to rely exclusively on type inference
   |
LL |     fn f(a: impl A) -> A;
   |             ++++
help: alternatively, use a trait object to accept any type that implements `A`, accessing its methods at runtime using dynamic dispatch
   |
LL |     fn f(a: &dyn A) -> A;
   |             ++++

error[E0782]: trait objects must include the `dyn` keyword
  --> $DIR/object-unsafe-trait-should-use-self-2021-without-dyn.rs:4:19
   |
LL |     fn f(a: A) -> A;
   |                   ^
   |
help: use `impl A` to return an opaque type, as long as you return a single underlying type
   |
LL |     fn f(a: A) -> impl A;
   |                   ++++
help: alternatively, you can return an owned trait object
   |
LL |     fn f(a: A) -> Box<dyn A>;
   |                   +++++++  +

error[E0782]: trait objects must include the `dyn` keyword
  --> $DIR/object-unsafe-trait-should-use-self-2021-without-dyn.rs:11:13
   |
LL |     fn f(a: B) -> B;
   |             ^
   |
help: use a new generic type parameter, constrained by `B`
   |
LL |     fn f<T: B>(a: T) -> B;
   |         ++++++    ~
help: you can also use an opaque type, but users won't be able to specify the type parameter when calling the `fn`, having to rely exclusively on type inference
   |
LL |     fn f(a: impl B) -> B;
   |             ++++
help: alternatively, use a trait object to accept any type that implements `B`, accessing its methods at runtime using dynamic dispatch
   |
LL |     fn f(a: &dyn B) -> B;
   |             ++++

error[E0782]: trait objects must include the `dyn` keyword
  --> $DIR/object-unsafe-trait-should-use-self-2021-without-dyn.rs:11:19
   |
LL |     fn f(a: B) -> B;
   |                   ^
   |
help: use `impl B` to return an opaque type, as long as you return a single underlying type
   |
LL |     fn f(a: B) -> impl B;
   |                   ++++
help: alternatively, you can return an owned trait object
   |
LL |     fn f(a: B) -> Box<dyn B>;
   |                   +++++++  +

error[E0782]: trait objects must include the `dyn` keyword
  --> $DIR/object-unsafe-trait-should-use-self-2021-without-dyn.rs:18:20
   |
LL |     fn f(&self, a: C) -> C;
   |                    ^
   |
help: use a new generic type parameter, constrained by `C`
   |
LL |     fn f<T: C>(&self, a: T) -> C;
   |         ++++++           ~
help: you can also use an opaque type, but users won't be able to specify the type parameter when calling the `fn`, having to rely exclusively on type inference
   |
LL |     fn f(&self, a: impl C) -> C;
   |                    ++++
help: alternatively, use a trait object to accept any type that implements `C`, accessing its methods at runtime using dynamic dispatch
   |
LL |     fn f(&self, a: &dyn C) -> C;
   |                    ++++

error[E0782]: trait objects must include the `dyn` keyword
  --> $DIR/object-unsafe-trait-should-use-self-2021-without-dyn.rs:18:26
   |
LL |     fn f(&self, a: C) -> C;
   |                          ^
   |
help: use `impl C` to return an opaque type, as long as you return a single underlying type
   |
LL |     fn f(&self, a: C) -> impl C;
   |                          ++++
help: alternatively, you can return an owned trait object
   |
LL |     fn f(&self, a: C) -> Box<dyn C>;
   |                          +++++++  +

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0038, E0782.
For more information about an error, try `rustc --explain E0038`.
